welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:12: error: ':' expected but ')' found.
def amende(speed): Int = {
                ^caughtSpeeding:25: error: identifier expected but '}' found.
 }
 ^